# api-demo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/consumer/: Dockerfile  main.py  schema.sql
src/propogator/: Dockerfile  main.py
